<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddDataActivity">

<EditText
    android:id="@+id/editid"
    android:layout_marginTop="50dp"
    android:layout_centerHorizontal="true"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:hint="@string/id"/>
    <EditText
        android:id="@+id/editname"
        android:layout_centerHorizontal="true"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:hint="@string/name"/>
    <EditText
        android:id="@+id/editemail"
        android:layout_centerHorizontal="true"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        android:hint="@string/email"/>

    <EditText
        android:id="@+id/editcity"
        android:layout_centerHorizontal="true"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="230dp"
        android:hint="@string/city" />
    <Button
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="130dp"
        android:text="@string/save"

        />
</RelativeLayout>