<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateDataActivity">
    <EditText
        android:id="@+id/uet_id"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/id" />

    <EditText
        android:id="@+id/uet_name"
        android:layout_centerHorizontal="true"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:hint="@string/name"/>

    <EditText
        android:id="@+id/uet_email"
        android:layout_centerHorizontal="true"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/uet_city"
        android:layout_centerHorizontal="true"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="230dp"
        android:hint="@string/city" />

    <Button
        android:id="@+id/update_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="130dp"
        android:text="update data" />



</RelativeLayout>